--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -4,33 +4,19 @@
 
 general {
     interval = 1
+    output_format = i3bar
     colors = true
-    color_good="#FFFFFF"
-    color_degraded="#ffd75f"
-    color_bad="#d75f5f"
+    color_good="#79740e"
+    color_degraded="#af3a03"
+    color_bad="#9d0006"
 }
 
 order += "volume master"
 order += "battery 0"
-order += "disk /"
-order += "cpu_usage"
-order += "load"
 order += "tztime local"
 
 tztime local {
     format = " %Y-%m-%d %H:%M:%S "
-}
-
-disk "/" {
-    format = " %avail "
-}
-
-cpu_usage {
-    format = " %usage "
-}
-
-load {
-    format = " %5min 5min "
 }
 
 volume master {
