--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -11,29 +11,40 @@ general {
     color_bad="#9d0006"
 }
 
-order += "volume master"
 order += "battery 0"
-order += "tztime local"
+order += "volume master"
+order += "wireless wlp0s20f3"
+order += "tztime time"
+order += "tztime date"
 
-tztime local {
-    format = " %Y-%m-%d %H:%M:%S "
+wireless wlp0s20f3 {
+    format_up = " 󰖩%quality at %essid "
+    format_down = " 󰖪 "
+}
+
+tztime date {
+    format = "  %d-%m-%Y "
+}
+
+tztime time {
+    format = "  %H:%M:%S "
 }
 
 volume master {
-    format = " %volume "
-    format_muted = " %volume "
+    format = " 󰕿 %volume "
+    format_muted = " 󰸈 %volume "
     device = "default"
     mixer = "Master"
     mixer_idx = 0
 }
 
 battery 0 {
-    format = "%status %percentage "
+    format = " %status %percentage "
     format_down = " DOWN "
-    status_chr = " CHARGING "
-    status_bat = " BATTERY "
+    status_chr = "󰂄"
+    status_bat = "󰁽"
     status_unk = " UNKNOWN "
     #last_full_capacity = true
-    status_full = " FULL "
+    status_full = " 󰁹 "
     path = "/sys/class/power_supply/BAT%d/uevent"
 }
