--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,6 +39,7 @@ bind h split-window -v -c "#{pane_current_path}"
 
 # New window in same path
 bind c new-window -c "#{pane_current_path}"
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 # Refresh tmux config with r
 unbind r
@@ -80,11 +81,12 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # List of tmux plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux after computer restarts
-
 set -g @resurrect-capture-pane-contents 'on'
 
 # Load theme
-source-file ~/.config/tmux/style.conf
+source-file "$XDG_CONFIG_HOME/tmux/style.conf"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_DATA_HOME/tmux/plugins"
+run "$XDG_DATA_HOME/tmux/plugins/tpm/tpm"
+
