--- a/i3/config
+++ b/i3/config
@@ -8,8 +8,8 @@ workspace_auto_back_and_forth yes
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
 
-# no follow mouse
 focus_follows_mouse no
+focus_on_window_activation focus
 
 ##########
 # DESIGN #
