--- a/i3/keymaps.conf
+++ b/i3/keymaps.conf
@@ -5,7 +5,7 @@ floating_modifier $mod
 
 # Applications
 bindsym $mod+Return exec urxvtc
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id urxvt -title 'fzf-menu' -e i3-dmenu-desktop --dmenu=fzf
 
 bindsym $mod+Shift+q kill
 
@@ -53,7 +53,7 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-assign [class="URxvt" instance="urxvt"] $term
+assign [class="URxvt" instance="urxvt" title="^(?!fzf).*"] $term
 assign [class="Brave-browser" instance="brave-browser"] $web
 assign [class="Zathura" instance="org.pwmt.zathura"] $doc
 
