--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,7 +65,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel
 bind-key p run "xsel -ob | tmux load-buffer - ; tmux paste-buffer"
 
 # Toggle status bar
-bind b run "tmux show-option -g status | grep -q on && tmux set-option -g status off || tmux set-option -g status on"
+bind-key b set-option status
 
 # Don't exit copy mode when dragging with mouse
 unbind -T copy-mode-vi MouseDragEnd1Pane
@@ -89,4 +89,3 @@ source-file "$XDG_CONFIG_HOME/tmux/style.conf"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_DATA_HOME/tmux/plugins"
 run "$XDG_DATA_HOME/tmux/plugins/tpm/tpm"
-
