--- a/i3/keymaps.conf
+++ b/i3/keymaps.conf
@@ -5,7 +5,7 @@ floating_modifier $mod
 
 # Applications
 bindsym $mod+Return exec urxvtc
-bindsym $mod+d exec --no-startup-id urxvt -title 'fzf-menu' -e i3-dmenu-desktop --dmenu=fzf
+bindsym $mod+d exec --no-startup-id urxvt -title 'fzf-menu' -e i3-dmenu-desktop --dmenu='zsh -i -c fzf'
 
 bindsym $mod+Shift+q kill
 
@@ -45,39 +45,53 @@ bindsym $mod+Shift+space floating toggle
 set $term "1"
 set $web "2"
 set $doc "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
+set $mess "4"
+set $draw "5"
+set $game "6"
+set $record "7"
+set $media "8"
 set $ws9 "9"
 set $ws10 "10"
 
 assign [class="URxvt" instance="urxvt" title="^(?!fzf).*"] $term
 assign [class="Brave-browser" instance="brave-browser"] $web
 assign [class="Zathura" instance="org.pwmt.zathura"] $doc
+assign [class="Signal" instance="signal"] $doc
+assign [class="Com.github.xournalpp.xournalpp" instance="com.github.xournalpp.xournalpp"] $draw
+assign [class="steam" instance="steamwebhelper"] $game
+assign [class="obs" instance="obs"] $record
+assign [class="vlc" instance="vlc"] $media
 
 bindsym $mod+1 workspace number $term
 bindsym $mod+2 workspace number $web
 bindsym $mod+3 workspace number $doc
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
+bindsym $mod+4 workspace number $mess
+bindsym $mod+5 workspace number $draw
+bindsym $mod+6 workspace number $game
+bindsym $mod+7 workspace number $record
+bindsym $mod+8 workspace number $media
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
 bindsym $mod+Shift+1 move container to workspace number $term
 bindsym $mod+Shift+2 move container to workspace number $web
 bindsym $mod+Shift+3 move container to workspace number $doc
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+4 move container to workspace number $mess
+bindsym $mod+Shift+5 move container to workspace number $draw
+bindsym $mod+Shift+6 move container to workspace number $game
+bindsym $mod+Shift+7 move container to workspace number $record
+bindsym $mod+Shift+8 move container to workspace number $media
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
+
+workspace $term output primary
+workspace $web output primary
+workspace $doc output primary
+workspace $mess output eDP-1 primary
+workspace $draw output primary
+workspace $game output primary
+workspace $record output eDP-1 primary
+workspace $media output primary
 
 bindsym $mod+comma move workspace to output next
 
@@ -147,5 +161,7 @@ mode "$mode_system" {
 	bindsym Escape mode "default"
 }
 bindsym $mod+BackSpace mode "$mode_system"
+
+bindsym XF86AudioPlay exec --no-startup-id pkill -USR1 '^redshift$'
 
 # vim: set ft=i3config:
