--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -62,7 +62,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 
 # Paste text with "p"
-bind-key p run "xsel -ob | tmux load-buffer - ; tmux paste-buffer"
+bind-key -T copy-mode-vi p run "xsel -ob | tmux load-buffer - ; tmux paste-buffer"
 
 # Toggle status bar
 bind-key b set-option status
