--- a/i3/keymaps.conf
+++ b/i3/keymaps.conf
@@ -114,8 +114,8 @@ bindsym Print exec --no-startup-id flameshot gui
 
 set $mode_display Config monitor resolution - Default config (d), Home (h)
 mode "$mode_display" {
-    bindsym d exec --no-startup-id sh "$HOME/.config/X11/layouts/default", mode "default"
-    bindsym h exec --no-startup-id sh "$HOME/.config/X11/layouts/home", mode "default"
+    bindsym d exec --no-startup-id sh "$HOME/.config/X11/layouts/default", exec --no-startup-id feh --no-fehbg --bg-fill ~/pictures/vim-wallpaper.png, mode "default"
+    bindsym h exec --no-startup-id sh "$HOME/.config/X11/layouts/home", exec --no-startup-id feh --no-fehbg --bg-fill ~/pictures/vim-wallpaper.png, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
