--- a/i3/config
+++ b/i3/config
@@ -94,4 +94,4 @@ bar {
 exec --no-startup-id redshift
 
 # Wallpaper
-exec --no-startup-id feh --no-fehbg --bg-fill ~/pictures/vim-wallpaper.png
+exec_always --no-startup-id feh --no-fehbg --bg-fill --randomize ~/pictures/wallpapers
