Change to fzf-menu to fmenu

--- a/i3/keymaps.conf
+++ b/i3/keymaps.conf
@@ -53,7 +53,7 @@ set $media "8"
 set $ws9 "9"
 set $ws10 "10"
 
-assign [class="URxvt" instance="urxvt" title="^(?!fzf).*"] $term
+assign [class="URxvt" instance="urxvt" title="^(?!fmenu).*"] $term
 assign [class="Brave-browser" instance="brave-browser"] $web
 assign [class="Zathura" instance="org.pwmt.zathura"] $doc
 assign [class="Signal" instance="signal"] $doc
