Simplify tmux conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,22 +1,10 @@
-# NOTE:
-# - To apply theme changes: tmux kill-server && rm -rf /tmp/tmux-*
-# - To avoid overlap, disable the Mac shortcut to switch input sources with Ctrl+Space in `System settings > Keyboard Shortcuts > Input Sources`
-
-# use zsh as default
-set-option -g default-shell /bin/zsh
-
-# set-option -a terminal-features 'xterm-256color:RGB'
-# set -g default-terminal "tmux-256color"
 set -as terminal-overrides 'rxvt*:RGB'
 
 # General
-set -g set-clipboard on         # use system clipboard
 set -g detach-on-destroy off    # don't exit from tmux when closing a session
-set -g escape-time 0            # remove delay for exiting insert mode with ESC in Neovim
 set -g history-limit 1000000    # increase history size (from 2,000)
 set -g mouse on                 # enable mouse support
 set -g status-interval 3        # update the status bar every 3 seconds
-set -g allow-passthrough on     # Allow programs in the pane to bypass tmux (e.g. for image preview)
 set -g focus-events on		# Set focus-events on (important for Neovim autoread)
 
 # enable pane titles
@@ -24,18 +12,12 @@ bind @ run "tmux show-option -g pane-border-status | grep -q top && tmux set-opt
 
 set -g pane-border-format " [ ###P #T ] "
 
-bind £ command-prompt "select-pane -T '%%'"
+bind "#" command-prompt "select-pane -T '%%'"
 
 # set new prefix key
 set -g prefix C-Space
 unbind C-b
 bind-key C-Space send-prefix
-
-# Split with v and h
-unbind %
-unbind '"'
-bind v split-window -h -c "#{pane_current_path}"
-bind h split-window -v -c "#{pane_current_path}"
 
 # New window in same path
 bind c new-window -c "#{pane_current_path}"
@@ -53,7 +35,7 @@ set-option -g display-panes-time 3000
 bind -r m resize-pane -Z
 
 # Enable vi mode to allow vim movements
-set-window-option -g mode-keys vi
+set -g mode-keys vi
 
 # Start selecting text with "v"
 bind-key -T copy-mode-vi 'v' send -X begin-selection
