--- a/i3/keymaps.conf
+++ b/i3/keymaps.conf
@@ -56,7 +56,7 @@ set $ws10 "10"
 assign [class="URxvt" instance="urxvt" title="^(?!fmenu).*"] $term
 assign [class="Brave-browser" instance="brave-browser"] $web
 assign [class="Zathura" instance="org.pwmt.zathura"] $doc
-assign [class="Signal" instance="signal"] $doc
+assign [class="Signal" instance="signal"] $mess
 assign [class="Com.github.xournalpp.xournalpp" instance="com.github.xournalpp.xournalpp"] $draw
 assign [class="steam" instance="steamwebhelper"] $game
 assign [class="obs" instance="obs"] $record
