--- a/i3/keymaps.conf
+++ b/i3/keymaps.conf
@@ -114,8 +114,8 @@ bindsym Print exec --no-startup-id flameshot gui
 
 set $mode_display Config monitor resolution - Default config (d), Home (h)
 mode "$mode_display" {
-    bindsym d exec --no-startup-id sh "$HOME/.config/X11/layouts/default", mode "default"
-    bindsym h exec --no-startup-id sh "$HOME/.config/X11/layouts/home", mode "default"
+    bindsym d exec --no-startup-id sh "$HOME/.config/X11/layouts/default", exec --no-startup-id feh --no-fehbg --bg-fill --randomize ~/pictures/wallpapers, mode "default"
+    bindsym h exec --no-startup-id sh "$HOME/.config/X11/layouts/home", exec --no-startup-id feh --no-fehbg --bg-fill --randomize ~/pictures/wallpapers, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -162,6 +162,7 @@ mode "$mode_system" {
 }
 bindsym $mod+BackSpace mode "$mode_system"
 
-bindsym XF86AudioPlay exec --no-startup-id pkill -USR1 '^redshift$'
+bindsym XF86AudioPlay exec redshift -P -O 1000
+bindsym $mod+XF86AudioPlay exec redshift -x
 
 # vim: set ft=i3config:
