Prevent tmux from starting a login shell

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set -as terminal-overrides 'rxvt*:RGB'
+set -g default-command "${SHELL}"
 
 # General
 set -g detach-on-destroy off    # don't exit from tmux when closing a session
