--- a/.editorconfig
+++ b/.editorconfig
@@ -5,10 +5,11 @@ charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+tabstop = 8
 indent_size = 4
 indent_style = tab
 
-[*.{html,astro,css,js,jsx,ts,tsx,config,json,md,lua,yaml}]
+[*.{html,astro,css,js,jsx,ts,tsx,json,lua,yaml,yml,txt,md}]
 indent_style = space
 indent_size = 2
 
@@ -17,9 +18,6 @@ indent_style = space
 indent_size = 4
 max_line_length = 79
 
-[*.java]
-indent_style = space
-indent_size = 2
-max_line_length = 100
-insert_final_newline = false
+[*.{md,txt}]
+max_line_length = 80
 
