Replace Brave with librewolf

--- a/i3/keymaps.conf
+++ b/i3/keymaps.conf
@@ -54,7 +54,7 @@ set $ws9 "9"
 set $ws10 "10"
 
 assign [class="URxvt" instance="urxvt" title="^(?!fmenu).*"] $term
-assign [class="Brave-browser" instance="brave-browser"] $web
+assign [class="librewolf" instance="Navigator"] $web
 assign [class="Zathura" instance="org.pwmt.zathura"] $doc
 assign [class="Signal" instance="signal"] $mess
 assign [class="Com.github.xournalpp.xournalpp" instance="com.github.xournalpp.xournalpp"] $draw
